# fpe_orbital_dynamics

./: CITATION.cff  CMakeLists.txt  README.md  backbone.ipynb  pyproject.toml
benchmarks/: bench_assembly.py
cpp/include/fpe/: assembly.hpp  bspline.hpp  dual.hpp  dynamics.hpp  expm.hpp  gauss.hpp  halton.hpp  tensor_basis.hpp  threading.hpp
cpp/src/: bindings.cpp
docs/: theory.md
examples/: 01_ou_process_1d.py  02_damped_oscillator_2d.py  03_equinoctial_deterministic.py  04_equinoctial_stochastic.py  05_duffing_oscillator.py  06_debris_decay_ballistic.py  07_mc_convergence.py  08_reentry_first_passage.py  09_cw_station_keeping_4d.py  equinoctial_common.py
python/fpe/: __init__.py  basis.py  dynamics.py  metrics.py  pdf.py  separable.py  solver.py
tests/: test_assembly_projection.py  test_bspline.py  test_duffing.py  test_equinoctial.py  test_expm.py  test_first_passage.py  test_fpe_analytic.py  test_halton.py  test_highdim.py  test_mc_convergence.py  test_pdf.py  test_separable.py
